# keras-vision-models

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  format_repo.py  parity_harness.py  pyproject.toml  requirements.txt  ruff.toml  sam_vit_huge.weights.json  setup.py  test.py  test_processor.py  test_processor2.py  tf_efficientnet_lite4.keras  vgg16_tv_in1k.keras
.github/workflows/: code-quality.yml  layer-tests.yml  model-test.yml  release.yml  test-conversions.yml  test_code.yml  tests.yml  weight-conversion.yml
_scripts/: sam_demo_amg.py  sam_demo_points.py
benchmarks/: backbones.md  object_detection.md  segmentation.md  vlm.md
docs/: backbones.md  clip.md  deeplabv3.md  depth_anything_v1_v2.md  detr.md  dfine.md  dino_v1_v2.md  dinov3.md  eomt.md  layers.md  metaclip2.md  object_detection.md  qwen2_vl.md  rf_detr.md  rt_detr.md  rt_detr_v2.md  sam.md  sam2.md  sam2_video.md  sam3.md  segformer.md  segmentation.md  siglip.md  siglip2.md  vlms.md  whisper.md
kmodels/: __init__.py  _test_runner.py  version.py
kmodels/base/: __init__.py  base_audio_feature_extractor.py  base_feature_extractor.py  base_image_processor.py  base_processor.py  base_tokenizer.py
kmodels/layers/: __init__.py  image_normalization.py  layer_scale.py  stochastic_depth.py
kmodels/models/: __init__.py
kmodels/utils/: __init__.py  hf_gated_weight_download.py  image.py  labels.py  model_equivalence_tester.py  model_weights_util.py  video.py  visualization.py  viz.py  weight_transfer_torch_to_keras.py
kmodels/weight_utils/: __init__.py  hf_gated_weight_download.py  model_weights_util.py  weight_split_torch_and_keras.py
kv/: __init__.py
kv/layers/: __init__.py  class_dist_token.py  class_dist_token_test.py  class_token.py  efficient_multi_head_self_attention.py  efficient_multi_head_self_attention_test.py  global_response_norm.py  global_response_norm_test.py  image_normalization.py  image_normalization_test.py  image_preprocessing.py  image_preprocessing_test.py  layer_scale.py  layer_scale_test.py  multi_head_self_attention.py  multi_head_self_attention_test.py  pos_embedding.py  pos_embedding_test.py  std_conv2d.py  std_conv2d_test.py  stochastic_depth.py
kvmm/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_backbone_modeling.py  test_modelling.py  test_segmentation_modeling.py  weight_conversion_test.py
(+993 files in other folders)
