[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kmodels"
authors = [{ name = "Gitesh Chawda", email = "gitesh.ch.0912@gmail.com" }]
description = "Pretrained keras 3 vision models"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "machine-learning",
    "jax",
    "computer-vision",
    "neural-networks",
    "tensorflow",
    "torch",
    "deep-learning",
    "keras",
    "imagenet",
    "pretrained-weights",
    "convolutional-neural-networks",
    "transfer-learning",
    "python-ml",
    "data-science",
    "ai-research",
    "vision-transformer",
    "image-classification",
    "model-training",
    "pytorch",
]
license = { text = "Apache License 2.0" }
classifiers = [
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = ["version"]
dependencies = ["keras"]

[project.urls]
homepage = "https://github.com/IMvision12/keras-models"
documentation = "https://github.com/IMvision12/keras-models"
repository = "https://github.com/IMvision12/keras-models.git"

[tool.setuptools.packages]
find = { include = ["kmodels*"] }

[tool.setuptools.dynamic]
version = { attr = "kmodels.__version__" }

[tool.coverage.run]
source = ["kmodels", "tests"]
omit = [
    "kmodels/models/*/convert_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:__array__ implementation doesn't accept a copy keyword:DeprecationWarning",
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]
